Fixed alignment issue on mobile devices, and reduced name font size

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -48,7 +48,7 @@ $precis_element_box_opacity: 0.4;
         color: $full_name_color;
         font-family: $full_name_font;
         // font-weight: bold;
-        font-size: 2.5em;
+        font-size: 2em;
         text-align: center !important;
     }
 
@@ -63,5 +63,6 @@ $precis_element_box_opacity: 0.4;
 
     #main_content_box {
         padding-right: 0px;
+        padding-left: 15px;
     }
 }
